# ampimp

./: .gitignore  .gitmodules  CMakeLists.txt  DEBUG.md  README.md  SETUP.md  build.sh  debug.sh  gdb_cmd.txt  ocd.sh
cmake/: AD5940_ADC.cmake  AD5940_Amperometric.cmake  AD5940_BATImpedance.cmake  AD5940_BIA.cmake  AD5940_BIOZ-2Wire.cmake  AD5940_BioElec.cmake  AD5940_ChronoAmperometric.cmake  AD5940_DFT.cmake  AD5940_ECG.cmake  AD5940_ECSensEIS.cmake  AD5940_EDA.cmake  AD5940_HSDACCal.cmake  AD5940_Impedance.cmake  AD5940_LPDAC.cmake  AD5940_LPLoop.cmake  AD5940_Ramp.cmake  AD5940_Reset.cmake  AD5940_SPI.cmake  AD5940_Sequencer.cmake  AD5940_SqrWaveVoltammetry.cmake  AD5940_Temperature.cmake  AD5940_WG.cmake  aducm3029.cmake  binutils-arm-none-eabi.cmake  gdb-helper.cmake  jlink-conf.gdb.in  jlink-run.gdb.in
docker/: Dockerfile  build_container.sh  run_container.sh
inc/: main.h  retarget.h  uart_cmd.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/: examples.xml
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Documents/html/: _hello_world_8c_source.html  _hello_world_8h_source.html  adi__adc_8c_source.html  adi__adc_8h_source.html  adi__adc__config_8h_source.html  adi__adc__data_8c_source.html  adi__adc__def_8h_source.html  adi__beep_8c_source.html  adi__beep_8h_source.html  adi__beep__config_8h_source.html  adi__beep__def_8h_source.html  adi__callback_8h_source.html  adi__crc_8c_source.html  adi__crc_8h_source.html  adi__crc__config_8h_source.html  adi__crc__def_8h_source.html  adi__crypto_8c_source.html  adi__crypto_8h_source.html  adi__crypto__config_8h_source.html  adi__crypto__def_8h_source.html  adi__cycle__counting__config_8h_source.html  adi__cyclecount_8c_source.html  adi__cyclecount_8h_source.html  adi__data__transfer_8h_source.html  adi__dma_8c_source.html  adi__dma_8h_source.html  adi__drivers__general_8h_source.html  adi__flash_8c_source.html  adi__flash_8h_source.html  adi__flash__config_8h_source.html  adi__flash__data_8c_source.html  adi__flash__def_8h_source.html  adi__global__config_8h_source.html  adi__gpio_8c_source.html  adi__gpio_8h_source.html  adi__gpio__def_8h_source.html  adi__i2c_8c_source.html  adi__i2c_8h_source.html  adi__i2c__config_8h_source.html  adi__i2c__data_8c_source.html  (+236 more)
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Documents/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_8.js  groups_9.js  groups_a.js  groups_b.js  groups_c.js  groups_d.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+7 more)
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/: ADuCM3027_typedefs.h  ADuCM3029.h  ADuCM3029_device.h  ADuCM3029_typedefs.h  adi_processor.h  adi_version.h  system_ADuCM3029.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/config/: adi_flash_config.h  adi_rng_config.h  adi_sport_config.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/drivers/adc/: adi_adc.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/drivers/beep/: adi_beep.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/drivers/crc/: adi_crc.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/drivers/crypto/: adi_crypto.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/drivers/flash/: adi_flash.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/drivers/gpio/: adi_gpio.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/drivers/rng/: adi_rng.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/drivers/spi/: adi_spi.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/drivers/tmr/: adi_tmr.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/drivers/uart/: adi_uart.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/rtos_map/: adi_rtos_map.h  adi_rtos_map_threadx.h  adi_rtos_map_ucos_iii.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/sys/: ADuCM302x.h  ADuCM302x_device.h  ADuCM302x_typedefs.h  platform.h
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/License/: 2017-05-17-CM302xEZDFP Click Thru SLA.rtf
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/SVD/: ADuCM302x.sfd
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Source/: system_ADuCM3027.c
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Source/ARM/: startup_ADuCM3027.s
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Source/GCC/: ADuCM3027.ld
lib/BSP/AnalogDevices.ADuCM302x_DFP.3.2.0/Source/IAR/: startup_ADuCM3027.s
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/Flash/: ADuCM302x.FLM
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/: ADuCM3027.h  ADuCM3027_cdef.h  ADuCM3027_def.h  ADuCM3027_device.h  ADuCM3029_cdef.h  ADuCM3029_def.h  adi_callback.h  adi_cyclecount.h  common.h  retarget_uart_config.h  system_ADuCM3027.h
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/config/: adi_beep_config.h  adi_crc_config.h  adi_crypto_config.h
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/rtos_map/: adi_rtos_map_freertos.h  adi_rtos_map_noos.h  adi_rtos_map_ucos_ii.h
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/Include/sys/: ADuCM302x_cdef.h  adi_cio_macros.h
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/License/: 2017-05-17-CM302xEZDFP Click Thru SLA.txt
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/SVD/: ADuCM302x.SFR
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/Source/: adi_cyclecount.c  common.c  retarget_uart.c
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/Source/ARM/: startup_ADuCM3029.s
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/Source/GCC/: reset_ADuCM3027.S  startup_ADuCM3027.c
lib/bsp/AnalogDevices.ADuCM302x_DFP.3.2.0/Source/IAR/: startup_ADuCM3029.s
openocd/: aducm302x-200226.patch
py/: Pipfile  ad5940_app.py  ad5940_app_serial.py  ampimp_app.py  ampimp_serial.py  definitions.py
src/: AD5940Main.c  AD5940MainAmp.c  AD5940MainImp.c  ADICUP3029Port.c  UARTCmd.c  ampimp.c  main.c  retarget.c  uart_cmd.c
(+78 files in other folders)
